--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-CLERK_ISSUER=<oauth
+CLERK_ISSUER=<issuer_url>
 CLERK_AUDIENCE=clerk_client_id
 CLERK_CLIENT_SECRET=clerk_client_secret
 BASE_URL=http://localhost:8000
